# picoforge

./: .gitignore  CREDITS.md  Cargo.toml  Packager.toml  README.md  default.nix  flake.nix  package.json  picoforge.spec  shell.nix
.github/scripts/: build_appimage.sh
.github/workflows/: nix-binary-cache.yml  release.yml
data/: picoforge.spec
docs/: Installation.md  Troubleshooting.md
src/: app.css  main.rs
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: fido.rs  lib.rs
src-tauri/src/fido/: mod.rs
src/device/fido/: hid.rs
src/lib/components/device/: DeviceNotSupported.svelte
src/lib/components/dialogs/: AuthDialog.svelte  deleteCredentialDialog.svelte
src/lib/device/: constants.svelte.ts  manager.svelte.ts
src/lib/layout/: sidebar.svelte
src/lib/views/: aboutView.svelte  configView.svelte  homeView.svelte  logsView.svelte  passkeysView.svelte  securityView.svelte
src/routes/: +page.svelte
src/ui/: assets.rs  mod.rs  rootview.rs
src/ui/components/: button.rs  mod.rs  sidebar.rs
src/ui/views/: about.rs  config.rs  home.rs  passkeys.rs
